--- a/_config.flexblock.yml
+++ b/_config.flexblock.yml
@@ -22,7 +22,7 @@ toc:
 
 comments:
   enable: true
-  use: 'disqus' # valine || disqus
+  use: 'waline' # valine || disqus
   # valine 评论
   # docs: https://valine.js.org
   # You can get your appid and appkey from https://leancloud.cn
@@ -45,6 +45,8 @@ comments:
   disqus:
     website: yiliang-me
     error: 如果你看不到评论，那么就真的看不到评论 w(゜Д゜)w
+  waline:
+    serverURL: https://waline-cjjtchwsh-aquahydros-projects.vercel.app/
 
 # dplayer 视频播放
 # docs: http://dplayer.js.org/#/zh-Hans/
