--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/flexblock"]
     path = themes/flexblock
-    url = https://github.com/miiiku/hexo-theme-flexblock.git
+    url = https://github.com/AquaHydro/hexo-theme-flexblock
