--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -52,31 +52,52 @@ jobs:
         env:
           SECRET_ID: ${{ secrets.SECRETID }}
           SECRET_KEY: ${{ secrets.SECRETKEY }}
-          CDN_DOMAIN: your-cdn-domain.com  # 这里填入你的 CDN 加速域名
+          DOMAIN_Path: 'https://www.yiliang.me/*'
         run: |
-          TIMESTAMP=$(date +%s)
-          NONCE=$(od -vAn -N4 -tu4 < /dev/urandom)
-          HOST="cdn.tencentcloudapi.com"
-          ACTION="PurgePathCache"
-          VERSION="2018-06-06"
-          SERVICE="cdn"
-          HTTP_REQUEST_METHOD="POST"
-          
-          # 生成签名字符串
-          CANONICAL_REQUEST="${HTTP_REQUEST_METHOD}\n/\n\ncontent-type:application/json\nhost:${HOST}\n\ncontent-type;host\n$(echo -n "{\"Action\":\"${ACTION}\",\"Version\":\"${VERSION}\",\"SecretId\":\"${SECRET_ID}\",\"Timestamp\":${TIMESTAMP},\"Nonce\":${NONCE},\"Paths\":[\"https://${CDN_DOMAIN}/*\"],\"FlushType\":\"flush\"}" | openssl dgst -sha256 -hex | sed 's/^.* //')"
-          
-          STRING_TO_SIGN="TC3-HMAC-SHA256\n${TIMESTAMP}\n${TIMESTAMP}/cdn/tc3_request\n$(echo -n "${CANONICAL_REQUEST}" | openssl dgst -sha256 -hex | sed 's/^.* //')"
-          
-          SECRET_DATE=$(echo -n "${TIMESTAMP}" | openssl dgst -sha256 -hmac "TC3${SECRET_KEY}" | sed 's/^.* //')
-          SECRET_SERVICE=$(echo -n "cdn" | openssl dgst -sha256 -hmac "${SECRET_DATE}" | sed 's/^.* //')
-          SECRET_SIGNING=$(echo -n "tc3_request" | openssl dgst -sha256 -hmac "${SECRET_SERVICE}" | sed 's/^.* //')
-          
-          SIGNATURE=$(echo -n "${STRING_TO_SIGN}" | openssl dgst -sha256 -hmac "${SECRET_SIGNING}" | sed 's/^.* //')
-          
-          curl -X POST "https://${HOST}" \
-          -H "Content-Type: application/json" \
-          -H "Host: ${HOST}" \
-          -H "X-TC-Action: ${ACTION}" \
-          -H "X-TC-Timestamp: ${TIMESTAMP}" \
-          -H "X-TC-Version: ${VERSION}" \
-          -H "Authorization: TC3-HMAC-SHA256 Credential=${SECRET_ID}/${TIMESTAMP}/cdn/tc3_request, SignedHeaders=content-type;host, Signature=${SIGNATURE}" \
+          secret_id="${SECRET_ID}"
+          secret_key="${SECRET_KEY}"
+          token=""
+
+          service="cdn"
+          host="cdn.tencentcloudapi.com"
+          region=""
+          action="PurgePathCache"
+          version="2018-06-06"
+          algorithm="TC3-HMAC-SHA256"
+          timestamp=$(date +%s)
+          date=$(date -u -d @$timestamp +"%Y-%m-%d")
+          payload="{\"Paths\":[\"${DOMAIN_Path}\"],\"FlushType\":\"delete\"}"
+
+          # 生成规范请求串
+          http_request_method="POST"
+          canonical_uri="/"
+          canonical_querystring=""
+          canonical_headers="content-type:application/json; charset=utf-8\nhost:$host\nx-tc-action:$(echo $action | awk '{print tolower($0)}')\n"
+          signed_headers="content-type;host;x-tc-action"
+          hashed_request_payload=$(echo -n "$payload" | openssl sha256 -hex | awk '{print $2}')
+          canonical_request="$http_request_method\n$canonical_uri\n$canonical_querystring\n$canonical_headers\n$signed_headers\n$hashed_request_payload"
+
+          # 构造待签名字符串
+          credential_scope="$date/$service/tc3_request"
+          hashed_canonical_request=$(printf "$canonical_request" | openssl sha256 -hex | awk '{print $2}')
+          string_to_sign="$algorithm\n$timestamp\n$credential_scope\n$hashed_canonical_request"
+
+          # 计算签名
+          secret_date=$(printf "$date" | openssl sha256 -hmac "TC3$secret_key" | awk '{print $2}')
+          secret_service=$(printf $service | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_date" | awk '{print $2}')
+          secret_signing=$(printf "tc3_request" | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_service" | awk '{print $2}')
+          signature=$(printf "$string_to_sign" | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_signing" | awk '{print $2}')
+
+          # 构造 Authorization 头部
+          authorization="$algorithm Credential=$secret_id/$credential_scope, SignedHeaders=$signed_headers, Signature=$signature"
+
+          # 发起请求
+          curl -XPOST "https://$host" -d "$payload" \
+            -H "Authorization: $authorization" \
+            -H "Content-Type: application/json; charset=utf-8" \
+            -H "Host: $host" \
+            -H "X-TC-Action: $action" \
+            -H "X-TC-Timestamp: $timestamp" \
+            -H "X-TC-Version: $version" \
+            -H "X-TC-Region: $region" \
+            -H "X-TC-Token: $token"
