build(theme): update theme

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: AquaHydro
-subtitle: ''
-description: ''
-keywords:
+subtitle: 'AquaHydro's Blog'
+description: 'AquaHydro's Blog'
+keywords: 'AquaHydro, 博客, blog, aquahydro, waterhydroxyl'
 author: AquaHydro
 language: zh-CN
 timezone: 'Asia/Shanghai'
