fix(title): title name

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: AquaHydro
-subtitle: 'AquaHydro's Blog'
-description: 'AquaHydro's Blog'
+subtitle: "AquaHydro's Blog"
+description: "AquaHydro's Blog"
 keywords: 'AquaHydro, 博客, blog, aquahydro, waterhydroxyl'
 author: AquaHydro
 language: zh-CN
