--- a/_config.flexblock.yml
+++ b/_config.flexblock.yml
@@ -5,7 +5,7 @@ menu:
   关于: /about
 
 # 主页banner图
-banner: https://ilikestudy.cn/oss/2024%2F07%2F09%2F15-794353eeb15d3fb54e66aedafaf00072-db93f6.jpg
+banner: https://ilikestudy.cn/oss/2024%2F07%2F11%2F17-3b0d2d0a08204557ecc91464076245a4-d973ec.webp
 
 # 站点通知信息
 notice:
