--- a/_config.yml
+++ b/_config.yml
@@ -46,15 +46,12 @@ relative_link: false
 future: true
 syntax_highlighter: highlight.js
 highlight:
+  enable: true
   line_number: true
-  auto_detect: false
-  tab_replace: ''
-  wrap: true
-  hljs: false
-prismjs:
-  preprocess: true
-  line_number: true
-  tab_replace: ''
+  auto_detect: true
+  tab_replace:
+  hljs: true
+  theme: atom-one-dark
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
