--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: AquaHydro
-subtitle: "AquaHydro's Blog"
+subtitle: "不说话，装高手。"
 description: "AquaHydro's Blog"
 keywords: 'AquaHydro, 博客, blog, aquahydro, waterhydroxyl'
 author: AquaHydro
