--- a/_config.yml
+++ b/_config.yml
@@ -107,3 +107,9 @@ deploy:
   repo: https://github.com/AquaHydro/AquaHydro.github.io
   # example, https://github.com/hexojs/hexojs.github.io
   branch: gh-pages
+
+#订阅RSS
+feed:
+  type: atom
+  path: atom.xml
+  limit: false
