--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -48,56 +48,56 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-      # - name: Refresh Tencent Cloud CDN
-      #   env:
-      #     SECRET_ID: ${{ secrets.SECRETID }}
-      #     SECRET_KEY: ${{ secrets.SECRETKEY }}
-      #     DOMAIN_Path: 'https://www.ilikestudy.cn/*'
-      #   run: |
-      #     secret_id="${SECRET_ID}"
-      #     secret_key="${SECRET_KEY}"
-      #     token=""
+      - name: Refresh Tencent Cloud CDN
+        env:
+          SECRET_ID: ${{ secrets.SECRETID }}
+          SECRET_KEY: ${{ secrets.SECRETKEY }}
+          DOMAIN_Path: 'https://www.ilikestudy.cn/*'
+        run: |
+          secret_id="${SECRET_ID}"
+          secret_key="${SECRET_KEY}"
+          token=""
 
-      #     service="cdn"
-      #     host="cdn.tencentcloudapi.com"
-      #     region=""
-      #     action="PurgePathCache"
-      #     version="2018-06-06"
-      #     algorithm="TC3-HMAC-SHA256"
-      #     timestamp=$(date +%s)
-      #     date=$(date -u -d @$timestamp +"%Y-%m-%d")
-      #     payload="{\"Paths\":[\"${DOMAIN_Path}\"],\"FlushType\":\"delete\"}"
+          service="cdn"
+          host="cdn.tencentcloudapi.com"
+          region=""
+          action="PurgePathCache"
+          version="2018-06-06"
+          algorithm="TC3-HMAC-SHA256"
+          timestamp=$(date +%s)
+          date=$(date -u -d @$timestamp +"%Y-%m-%d")
+          payload="{\"Paths\":[\"${DOMAIN_Path}\"],\"FlushType\":\"delete\"}"
 
-      #     # 生成规范请求串
-      #     http_request_method="POST"
-      #     canonical_uri="/"
-      #     canonical_querystring=""
-      #     canonical_headers="content-type:application/json; charset=utf-8\nhost:$host\nx-tc-action:$(echo $action | awk '{print tolower($0)}')\n"
-      #     signed_headers="content-type;host;x-tc-action"
-      #     hashed_request_payload=$(echo -n "$payload" | openssl sha256 -hex | awk '{print $2}')
-      #     canonical_request="$http_request_method\n$canonical_uri\n$canonical_querystring\n$canonical_headers\n$signed_headers\n$hashed_request_payload"
+          # 生成规范请求串
+          http_request_method="POST"
+          canonical_uri="/"
+          canonical_querystring=""
+          canonical_headers="content-type:application/json; charset=utf-8\nhost:$host\nx-tc-action:$(echo $action | awk '{print tolower($0)}')\n"
+          signed_headers="content-type;host;x-tc-action"
+          hashed_request_payload=$(echo -n "$payload" | openssl sha256 -hex | awk '{print $2}')
+          canonical_request="$http_request_method\n$canonical_uri\n$canonical_querystring\n$canonical_headers\n$signed_headers\n$hashed_request_payload"
 
-      #     # 构造待签名字符串
-      #     credential_scope="$date/$service/tc3_request"
-      #     hashed_canonical_request=$(printf "$canonical_request" | openssl sha256 -hex | awk '{print $2}')
-      #     string_to_sign="$algorithm\n$timestamp\n$credential_scope\n$hashed_canonical_request"
+          # 构造待签名字符串
+          credential_scope="$date/$service/tc3_request"
+          hashed_canonical_request=$(printf "$canonical_request" | openssl sha256 -hex | awk '{print $2}')
+          string_to_sign="$algorithm\n$timestamp\n$credential_scope\n$hashed_canonical_request"
 
-      #     # 计算签名
-      #     secret_date=$(printf "$date" | openssl sha256 -hmac "TC3$secret_key" | awk '{print $2}')
-      #     secret_service=$(printf $service | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_date" | awk '{print $2}')
-      #     secret_signing=$(printf "tc3_request" | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_service" | awk '{print $2}')
-      #     signature=$(printf "$string_to_sign" | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_signing" | awk '{print $2}')
+          # 计算签名
+          secret_date=$(printf "$date" | openssl sha256 -hmac "TC3$secret_key" | awk '{print $2}')
+          secret_service=$(printf $service | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_date" | awk '{print $2}')
+          secret_signing=$(printf "tc3_request" | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_service" | awk '{print $2}')
+          signature=$(printf "$string_to_sign" | openssl dgst -sha256 -mac hmac -macopt hexkey:"$secret_signing" | awk '{print $2}')
 
-      #     # 构造 Authorization 头部
-      #     authorization="$algorithm Credential=$secret_id/$credential_scope, SignedHeaders=$signed_headers, Signature=$signature"
+          # 构造 Authorization 头部
+          authorization="$algorithm Credential=$secret_id/$credential_scope, SignedHeaders=$signed_headers, Signature=$signature"
 
-      #     # 发起请求
-      #     curl -XPOST "https://$host" -d "$payload" \
-      #       -H "Authorization: $authorization" \
-      #       -H "Content-Type: application/json; charset=utf-8" \
-      #       -H "Host: $host" \
-      #       -H "X-TC-Action: $action" \
-      #       -H "X-TC-Timestamp: $timestamp" \
-      #       -H "X-TC-Version: $version" \
-      #       -H "X-TC-Region: $region" \
-      #       -H "X-TC-Token: $token"
+          # 发起请求
+          curl -XPOST "https://$host" -d "$payload" \
+            -H "Authorization: $authorization" \
+            -H "Content-Type: application/json; charset=utf-8" \
+            -H "Host: $host" \
+            -H "X-TC-Action: $action" \
+            -H "X-TC-Timestamp: $timestamp" \
+            -H "X-TC-Version: $version" \
+            -H "X-TC-Region: $region" \
+            -H "X-TC-Token: $token"
